--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
           <label for="notes">Notes</label>
           <textarea id="notes" name="notes" rows="3" placeholder="Why you want to read it, where you heard about it, etc."></textarea>
         </div>
+        <div class="field-group conditional" id="rating-group">
+          <label>Rate this book</label>
+          <div class="star-picker" role="radiogroup" aria-label="Rating out of five stars">
+            <button type="button" class="star" data-star="1" aria-label="1 star">★</button>
+            <button type="button" class="star" data-star="2" aria-label="2 stars">★</button>
+            <button type="button" class="star" data-star="3" aria-label="3 stars">★</button>
+            <button type="button" class="star" data-star="4" aria-label="4 stars">★</button>
+            <button type="button" class="star" data-star="5" aria-label="5 stars">★</button>
+          </div>
+          <input type="hidden" name="rating" id="rating" value="0">
+        </div>
+        <div class="field-group conditional" id="review-group">
+          <label for="review">Review</label>
+          <textarea id="review" name="review" rows="3" placeholder="Share your thoughts once you've finished."></textarea>
+        </div>
         <button type="submit" class="primary" id="submit-button">Add to list</button>
       </form>
     </section>
